1.13	-Save and restore any custom chains found in iptables to avoid overwriting
	rules produced by other firewall manipulation software.

1.12    -Add locking to load_balance.pl script to avoid conditions in
         which multiple instances of the script is running.

1.11    -Fix inter-LAN forwarding when more than 1 LAN is defined.
	-Add ability to control whether packets are forwarded freely
	 among LAN and ISP interfaces or are restricted to certain
	 groups of mutually forwarding interfaces using the
	 forward_group configuration file option.

1.10	-Adjust interface parsing rules to recognize bonded vlan interfaces.

1.09    -Fix the way that load balancing marks work so that user code can
	 again "force" certain connections to go over one ISP or another.

1.08
	-Stability fix: restart lsm every time load_balance.pl invoked. This
	 avoids correct state not being detected if load_balance.pl called
	 while an interface is down.
	-Stability fix: prevent routing tables from being rewritten when
	 long_down_to_up event occurs (already handled by down_to_up).

1.07    -Bug fix: packets weren't being balanced correctly.
	-Bug fix: lsm action directories were not being installed in correct place.

1.06	-You can now assign weights to each of the ISPs in order to prefer one over the ohter

1.06	-Remove dependencies on interface configuration files. Everything figured out using ip route and ip addr.
	-Assign weights to ISPs for traffic flow preferences.
	-Allow user to take actions based on lsm events.
	-Retry interfaces that are not running at time load_balance runs
	-Remove dependencies on interface configuration files. Everything figured out using ip route and ip addr.
	
1.05    -Delete user-defined chains for the "nat" and "mangle" tables.
	-Create Net::Netmask objects using the new2() constructor, which returns
	 undef in cases when the address or mask can't be parsed.

1.04    -Add two new convenience methods: add_route() and force_route().